fixing mobile logo alignment

--- a/dentallab/src/index.css
+++ b/dentallab/src/index.css
@@ -4,6 +4,11 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+.header-container{
+  max-width: 100%;
+  max-height: 100%;
+}
+
 .correct{
   background-color: #99e59e;
   border-radius: 10px;
@@ -27,17 +32,20 @@ body {
 h1 {
   font-family: 'Montserrat', sans-serif;
 }
+
 h3{
   margin: 0;
   padding-top: 6px;
   padding-bottom: 1px;
 }
+
 button{
   padding: 10px;
   border-radius: 10px;
   font-size: 16px;
   margin: 5px;
 }
+
 .questionImg{
   display: block;
   align-items: center;
@@ -46,10 +54,12 @@ button{
   margin-left: auto;
   margin-right: auto;
 }
+
 .options{
   display: inline-block;
   text-align: left;
 }
+
 .footer-container{
   color: #3B8B9A;
 }
